stuf/src/p3/tests/t020.gpl
string c = 7 * "apples";
string f = 12.5 * "apples";
string g = "bobbing" * 2;
string h = "bobbing" * 4.2;
string i = "bobbing" * "apples";
